--- a/assets/css/pagamento-realizado.css
+++ b/assets/css/pagamento-realizado.css
@@ -1,46 +1,44 @@
-.principal{
-    & .pagamento-realizado{
+.principal {
+    & .pagamento-realizado {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
-    & .titulo{
+
+    & .titulo {
         font-size: 3rem;
         margin-top: 6rem;
-
     }
-    & .img-pagamento-realizado{
+
+    & .img-pagamento-realizado {
         width: 30%;
     }
-    & .paragrafo{
+
+    & .paragrafo {
         font-size: 1.7rem;
         font-weight: 500;
     }
-    & .btn-ver-detalhes{
-        background-color: #FFFFFF;
-        font-size: 1.7rem;
-        padding: .5rem 2.5rem;
+
+    & .btn-ver-detalhes {
+        background-color: #93CBDB;
         border-radius: .4rem;
         margin-top: 5rem;
     }
 }
 
-
-
-@media (max-width: 768px){
-    .principal{
-        & .img-pagamento-realizado{
+@media (max-width: 768px) {
+    .principal {
+        & .img-pagamento-realizado {
             width: 50%;
         }
     }
 }
 
-@media (max-width: 480px){
-    .principal{
-        & .img-pagamento-realizado{
+@media (max-width: 480px) {
+    .principal {
+        & .img-pagamento-realizado {
             width: 70%;
         }
     }
-
 }
