--- a/assets/css/pagamento.css
+++ b/assets/css/pagamento.css
@@ -1,255 +1,289 @@
-:root{ 
+:root {
     --fonte-titulo: 2.5rem;
-    --fonte-subtitulo: 1.4rem;
-    --fonte-paragrafo: 1.4rem;
+    --fonte-subtitulo: 1.7rem;
+    --fonte-paragrafo: 1.7rem;
 }
-.principal{
-    & .titulo-pagamento{
+
+.principal {
+    & .titulo-pagamento {
         text-align: center;
         font-size: var(--fonte-titulo);
         font-weight: 600;
-        margin-top: 5rem;
-
+        margin-top: 2rem;
     }
 
-    & .p-pagamento{
+    & .p-pagamento {
         font-size: 1.7rem;
         margin: 2rem 0;
     }
 
-    & .op-pagamento{
-        font-size: 1.5rem;
-            margin: 0 .5rem;
+    & .op-pagamento {
+        font-size: 1.7rem;
+        margin: 0 .5rem;
 
-            & i {
-                margin: .5rem 1rem;
+        & i {
+            margin: .5rem 1rem;
+        }
+
+        & .op-cartoes {
+            & .cartao-alinhamento {
+                display: flex;
+                gap: .5rem;
+                margin-left: 1rem;
             }
-            & .op-cartoes{
-                & .cartao-alinhamento{
-                    display: flex;
-                    gap: .5rem;
-                    margin-left: 1rem;
-                }
-                & .info-cartao-cadastrado{
-                    display: flex;
-                    font-size: 1rem;
-                    align-items: center;
-                    & .icone-cartao{
-                        width: 4rem;
-                    }
-                }
-                & .ad-cartao{
-                    font-size: 1rem ;
+
+            & .info-cartao-cadastrado {
+                display: flex;
+                font-size: 1.5rem;
+                align-items: center;
+                background-color: #fff;
+                border-radius: 10px;
+                padding: 1rem;
+
+                & .icone-cartao {
+                    width: 4rem;
                 }
             }
+        }
     }
-    & .container-forms{
+
+    & .container-forms {
         display: flex;
         flex-direction: column;
-        gap: 3em;
+        gap: 2em;
         margin: 5rem 0;
     }
-    & .itens-forms{
-        display: flex;
 
-        & .label-pagamento{
-            font-size: 1.5rem;
+    & .lado-a-lado {
+        display: flex;
+        gap: 0 6rem;
+    }
+
+    & .itens-forms {
+        display: flex;
+        flex-direction: column;
+
+        & .label-pagamento {
+            font-size: 1.7rem;
             margin-right: .5rem;
         }
-        & .cod-cartao{
-            width: 6rem;
+
+        & .cod-cartao {
+            width: 120%;
             padding: .4rem .1rem;
             border-radius: .4rem;
+            border: 1px solid #FF67C5B2;
         }
-        & .input-dados{
+
+        & .input-dados {
             width: 70%;
             padding: .4rem .1rem;
             border-radius: .4rem;
-
+            border: 1px solid #FF67C5B2;
         }
-        
-        & .containe-check{
+
+        & .containe-check {
             display: flex;
             align-items: center;
         }
-        & .check-salvar{
+
+        & .check-salvar {
             width: 1em;
         }
-        & .label-check{
-            font-size: 1.2rem;
+
+        & .label-check {
+            font-size: 1.7rem;
         }
-        
     }
-    & .btn-salvar{
+
+    & .btn-salvar {
         display: block;
         margin: auto;
         background-color: #93CBDB;
-        color: #fff;
         font-size: 2rem;
         padding: .8rem 4rem;
         border-radius: .5rem;
     }
 
-    & .nome-hotel{
-        font-size: 1.3rem;
+    & .nome-hotel {
+        font-size: 1.8rem;
         margin: 3rem 0;
-        & span{
+
+        & span {
             font-weight: 600;
+            font-family: Quicksand, sans-serif;
         }
     }
 
-    & .infos-hospedagem{
+    & .infos-hospedagem {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 1rem;
-        
-        & .cards-infos{
+
+        & .cards-infos {
             border: .1em solid #B0B0B0E5;
             background-color: #fff;
             padding: 1em 1.5em;
             width: 25rem;
-            & p{
-                font-size: 1.5rem;
-            }
-            & span{
-                font-weight: 600;
+            box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.7);
+
+            & p {
+                font-size: 1.7rem;
             }
 
+            & span {
+                font-weight: 600;
+            }
         }
-        
     }
-    & .servicos-extras{
-        & .subtitulo-servico{
-            text-align: center;
+
+    & .servicos-extras {
+        text-align: center;
+
+        & .subtitulo-servico {
             font-size: var(--fonte-subtitulo);
             margin: 5rem 0 3rem;
         }
-        
-        & .container-sevicos{
+
+        & .container-sevicos {
             display: flex;
             gap: 3rem;
             justify-content: space-around;
             flex-wrap: wrap;
         }
-        & .cards-servicos{
-            background-color: #93CBDB4D;
-            display: flex;
-            width: 20rem;
-            justify-content: center;
-            gap: 1rem;
-            padding: 1rem 1.5rem;
-            border-radius: .4rem;
-            & .icons-servicos{
-                width: 2rem;
-            }
-            & .tipo-servico{
-                font-size: 1.4rem;
-            }
-        }
-        & .preco-servicos{
+
+        & .preco-servicos {
             text-align: center;
         }
     }
 
-    & .preco-final{
+    & .preco-final {
         text-align: center;
-        
-        & .subtitulo-pagamento{
+
+        & .subtitulo-pagamento {
             font-size: var(--fonte-subtitulo);
+            margin: 5rem 0 3rem;
         }
-        & .p-preco-final{
+
+        & .p-preco-final {
             font-size: var(--fonte-paragrafo);
             margin-top: 2rem;
         }
 
-        & .valor-final{
+        & .valor-final {
             background-color: #FFE03980;
             width: 15rem;
             margin: auto;
             padding: 1rem;
-            border-radius: .3rem;
+            border-radius: .5rem;
             margin-top: 5rem;
             margin-bottom: 5rem;
-            & p{
-                font-size: 1.3rem;
+            box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.5);
+
+            & p {
+                font-size: 1.7rem;
             }
-            & span{
+
+            & span {
                 font-weight: 600;
                 font-size: 1.7rem;
             }
         }
     }
-    & .btn-confirmar{
+
+    & .btn-confirmar {
         background-color: #93CBDB;
-        color: #fff;
-        font-size: 2.5rem;
-        padding: 1rem 2rem;
-        border-radius: .4rem;
+
         margin-top: 5rem;
         margin: auto;
     }
-    .container-pix{
+
+    & .container-pix {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-top: 2rem;
-        & .qr-code{
+
+        & .qr-code {
             width: 30%;
         }
-        & span{
+
+        & span {
             font-size: var(--fonte-paragrafo);
             font-weight: 600;
         }
-        & .p-pix{
+
+        & .p-pix {
             font-size: var(--fonte-paragrafo);
             text-align: center;
             margin: 1rem 0;
         }
-        & .btn-pix{
+
+        & .btn-pix {
             background-color: #FF67C5B2;
-            padding: .5rem 1.5rem;
-            font-size: var(--fonte-paragrafo);
             margin-top: 1rem;
             border-radius: .4rem;
         }
     }
-    
 }
-/* Animação do botão */
+
+.itens-servicos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.cards-servicos {
+    background-color: #93CBDB4D;
+    display: flex;
+    width: 20rem;
+    justify-content: center;
+    gap: 1rem;
+    text-align: center;
+    padding: 1rem 1.5rem;
+    border-radius: .4rem;
+
+    & .icons-servicos {
+        width: 2rem;
+    }
+
+    & .tipo-servico {
+        font-size: 1.7rem;
+    }
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
         transform: translateY(20px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
     }
 }
 
-/* Estilo padrão */
-.btn-salvar, .btn-confirmar {
+.btn-salvar,
+.btn-confirmar {
     background-color: #93CBDB;
-    color: #fff;
     font-size: 2rem;
     padding: 0.8rem 4rem;
     border-radius: 0.5rem;
-    animation: fadeIn 0.6s ease-out; /* Aplica a animação */
+    animation: fadeIn 0.6s ease-out;
 }
 
-/* Efeito de hover */
-.btn-salvar:hover, .btn-confirmar:hover {
+.btn-salvar:hover,
+.btn-confirmar:hover {
     background-color: #76b0ca;
     transform: scale(1.1);
     cursor: pointer;
 }
 
-
-
-
-
-.dados-cartao, .pagamento_pix {
+.dados-cartao,
+.pagamento_pix {
     display: none;
 }
 
@@ -264,17 +298,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color:#ffff;
+    background-color: #ffff;
     box-shadow: 0px 4px 4px 0px #00000040;
     border-radius: .4rem;
-    z-index: 2;
+    z-index: 10;
 }
 
 .modal-content {
     padding: 2rem;
     border-radius: 0.5rem;
     width: 100%;
-
     overflow-y: auto;
     position: relative;
 }
@@ -287,42 +320,62 @@
 }
 
 
-
-@media (max-width: 480px){
-      
-    .principal{
-        .p-pagamento{
-            text-align: center;
-        }
-        /* .forma-pagamento{
-            text-align: center;
-        } */
-        & .nome-hotel{
-            text-align: center;
-        }    
-
-        & .itens-forms{
-            flex-direction: column;
-            align-items: center;
-        }
-        & .container-pix{
-            & .qr-code{
-                width: 50%;
+@media (max-width: 768px) {
+    .principal {
+        & .container-pix {
+            & .p-pix {
+                width: 90%;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                word-break: break-all;
+                hyphens: auto;
             }
-        }
 
-    }
-    .modal{
-        left: 10%;
-        right: 10%;
-    }
-}
-@media (max-width: 768px){
-    .principal{
-        & .container-pix{
-            & .qr-code{
+            & .qr-code {
                 width: 40%;
             }
         }
+
+        & .itens-forms {
+            & .cod-cartao,
+            & .input-dados {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .principal {
+        .p-pagamento {
+            text-align: center;
+        }
+
+        & .nome-hotel {
+            text-align: center;
+        }
+
+        & .itens-forms {
+            & .cod-cartao,
+            & .input-dados {
+                width: 100%;
+            }
+        }
+
+        & .lado-a-lado {
+            flex-direction: column;
+            gap: 2rem;
+        }
+
+        & .container-pix {
+            & .qr-code {
+                width: 50%;
+            }
+        }
+    }
+
+    .modal {
+        left: 10%;
+        right: 10%;
     }
 }
