--- a/project/assets/css/adm.css
+++ b/project/assets/css/adm.css
@@ -37,7 +37,7 @@ body {
 
 aside {
     border: 0.5px solid rgba(0, 0, 0, 0.2);
-    width: 250px;
+    width: 20%;
     background-color: var(--color-fundo-tab);
     color: var(--color-fundo-tab);
     padding: 20px;
@@ -92,7 +92,7 @@ li:hover, .active{
 
 .floating-menu.show {
     top: 110px;
-    right: 20px;
+    right: 0px;
 }
 
 .floating-menu h4 {
@@ -106,7 +106,6 @@ li:hover, .active{
 .toggle-menu {
     position:relative;
     top: 0.15em;
-    right: 20px;
     /* background-color: #2c3e50; */
     color: #fff;
     padding: 10px;
@@ -118,7 +117,7 @@ li:hover, .active{
 main {
     flex: 1;
     padding: 80px 20px 20px 20px;
-    margin-left: 250px;
+    margin-left: 15px;
 }
 
 .dashboard {
@@ -234,17 +233,10 @@ li{
     outline: none;
 }
 
-
-
-
-
-
-
-
 .header-right {
     display: flex;
     align-items: center;
-    gap: 20px; /* Define espaçamento entre os elementos */
+    gap: 20px; 
 }
 
 .user-profile {
