--- a/project/assets/css/adm.css
+++ b/project/assets/css/adm.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo {
-    width: 11em;
+    width: 20%;
 }
 
 .floating-menu {
@@ -336,6 +336,15 @@ canvas{
 }
 
 @media(max-width: 320px){
+    .user-profile {
+        width: 40%;
+    }
+    .toggle-menu img{
+        width: 80%;
+    } 
+    .logo   {
+        width: 30%;
+    }
     .painelControle h3, p{
         font-size: small;
     }
